Bug 1178682 - Reject the decoded sample if timestamp is revert. r=sotaro